# MathMentorAI

./: .env.example  .gitignore  Home.py  README.md  ingest_knowledge.py  pyproject.toml  requirements.txt  ui_components.py
config/: agent_config.yaml  model_config.yaml  rag_config.yaml
knowledge_base/examples/: applications_of_derivatives_examples.md  binomial_theorem_examples.md  complex_numbers_quadratic_examples.md  integral_calculus_examples.md  limits_continuity_differentiability_examples.md  matrices_determinants_examples.md  permutations_combinations_examples.md  probability_examples.md  sequences_series_examples.md  sets_relations_functions_examples.md  vector_algebra_examples.md
knowledge_base/formulas/: algebra.json  applications_of_derivatives.json  binomial_theorem.json  calculus.json  complex_numbers_quadratic.json  integral_calculus.json  limits_continuity_differentiability.json  matrices_determinants.json  permutations_combinations.json  probability.json  sequences_series.json  sets_relations_functions.json  vector_algebra.json
knowledge_base/templates/: applications_of_derivatives_template.md  binomial_theorem_template.md  complex_numbers_quadratic_template.md  integral_calculus_template.md  limits_continuity_differentiability_template.md  matrices_determinants_template.md  permutations_combinations_template.md  probability_template.md  sequences_series_template.md  sets_relations_functions_template.md  solving.md  vector_algebra_template.md
pages/: 1_Solve_Problem.py
scripts/setup/: setup.bat  setup.sh
scripts/tests/: conftest.py  (+1 more)
(+35 files in other folders)
