[project]
name = "math-mentor-ai"
version = "0.1.0"
description = "Multimodal AI Math Mentor with RAG and Agents"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-groq",
    "langgraph",
    "groq",
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "easyocr",
    "opencv-python-headless",
    "pillow",
    "faster-whisper",
    "pydub",
    "soundfile",
    "sympy",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "streamlit",
    "streamlit-extras",
    "python-dotenv",
    "pydantic",
    "pyyaml",
    "networkx",
    "requests",
    "loguru",
    "pandas",
    "plotly",
    "tavily-python>=0.7.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]
